【ADD】完整实现iTime时间记录应用 - 数据模型：EventCategory、EventType、TimeRecord - 服务层：CalendarService、NotificationService、TimerService - 视图层：时间记录、统计分析、设置界面 - 功能特性：   * 事件分类管理和自定义   * 实时计时和自动切换   * 多维度统计（日/周/月/年）   * Charts图表可视化   * 1小时提醒通知   * 日历自动同步   * iCloud数据同步 - 配置：iOS 16+、SwiftData、EventKit、UserNotifications

--- a/iTime/Info.plist
+++ b/iTime/Info.plist
@@ -6,5 +6,15 @@
 	<array>
 		<string>remote-notification</string>
 	</array>
+	<key>NSCalendarsUsageDescription</key>
+	<string>iTime需要访问日历以同步您的时间记录</string>
+	<key>NSCalendarsFullAccessUsageDescription</key>
+	<string>iTime需要完整访问日历以同步您的时间记录</string>
+	<key>NSCalendarsWriteOnlyAccessUsageDescription</key>
+	<string>iTime需要写入日历以保存您的时间记录</string>
+	<key>NSRemindersUsageDescription</key>
+	<string>iTime需要访问提醒事项以提供更好的时间管理体验</string>
+	<key>NSUserNotificationsUsageDescription</key>
+	<string>iTime需要发送通知以提醒您长时间进行的活动</string>
 </dict>
 </plist>
