【FEAT】实现动态APP图标切换功能 - 添加两套图标：默认图标(icon1)和记录中图标(icon2) - 创建AppIconManager服务管理图标切换 - 在Info.plist中配置CFBundleAlternateIcons - 集成到TimerService：开始计时时切换到记录图标，停止时恢复默认图标 - 应用恢复时自动恢复正确的图标状态 - 支持iOS动态图标切换API

--- a/iTime/Info.plist
+++ b/iTime/Info.plist
@@ -16,5 +16,25 @@
 	<string>iTime需要访问提醒事项以提供更好的时间管理体验</string>
 	<key>NSUserNotificationsUsageDescription</key>
 	<string>iTime需要发送通知以提醒您长时间进行的活动</string>
+	<key>CFBundleIcons</key>
+	<dict>
+		<key>CFBundlePrimaryIcon</key>
+		<dict>
+			<key>CFBundleIconFiles</key>
+			<array>
+				<string>AppIcon</string>
+			</array>
+		</dict>
+		<key>CFBundleAlternateIcons</key>
+		<dict>
+			<key>AppIcon-Recording</key>
+			<dict>
+				<key>CFBundleIconFiles</key>
+				<array>
+					<string>AppIcon-Recording</string>
+				</array>
+			</dict>
+		</dict>
+	</dict>
 </dict>
 </plist>
