【FIX】修复备用图标配置和切换提示问题 - 将备用图标从Assets移到项目根目录（iOS要求） - 重命名备用图标文件添加前缀：AppIcon-Recording-* - 修改切换方法使用completion handler（减少系统提示） - 更新Info.plist配置使用正确的图标名称 - 添加ALTERNATE_ICON_SETUP.md说明手动添加步骤 - 需要在Xcode中手动添加AppIcon-Recording.appiconset为文件夹引用

--- a/iTime/Info.plist
+++ b/iTime/Info.plist
@@ -18,13 +18,6 @@
 	<string>iTime需要发送通知以提醒您长时间进行的活动</string>
 	<key>CFBundleIcons</key>
 	<dict>
-		<key>CFBundlePrimaryIcon</key>
-		<dict>
-			<key>CFBundleIconFiles</key>
-			<array>
-				<string>AppIcon</string>
-			</array>
-		</dict>
 		<key>CFBundleAlternateIcons</key>
 		<dict>
 			<key>AppIcon-Recording</key>
@@ -33,7 +26,16 @@
 				<array>
 					<string>AppIcon-Recording</string>
 				</array>
+				<key>UIPrerenderedIcon</key>
+				<false/>
 			</dict>
+		</dict>
+		<key>CFBundlePrimaryIcon</key>
+		<dict>
+			<key>CFBundleIconFiles</key>
+			<array/>
+			<key>UIPrerenderedIcon</key>
+			<false/>
 		</dict>
 	</dict>
 </dict>
