feat: 实现 iOS 锁屏 Live Activity 功能
- 添加 Live Activity 支持，在锁屏界面显示计时状态
- 创建 iTimeWidgets Extension 用于 Live Activity UI 渲染
- 实现 TimerActivityAttributes 数据模型
- 实现 TimerLiveActivity Widget（支持锁屏和灵动岛）
- 在 TimerService 中集成 Live Activity 启动/停止逻辑
- 配置主 App 和 Widget Extension 的 Info.plist

功能特性：
- 锁屏界面显示事件名称、分类、图标和实时计时
- 支持 iPhone 14 Pro+ 的灵动岛显示（紧凑、展开、最小三种状态）
- 自动管理：开始计时启动 Activity，停止计时结束 Activity
- 支持 iOS 16.1+

技术实现：
- 使用 ActivityKit 框架
- Widget Extension 独立渲染 UI
- 主 App 和 Widget 共享 TimerActivityAttributes 数据定义

--- a/iTime/Info.plist
+++ b/iTime/Info.plist
@@ -6,6 +6,8 @@
 	<array>
 		<string>remote-notification</string>
 	</array>
+	<key>NSSupportsLiveActivities</key>
+	<true/>
 	<key>NSCalendarsUsageDescription</key>
 	<string>iTime需要访问日历以同步您的时间记录</string>
 	<key>NSCalendarsFullAccessUsageDescription</key>
